--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <div class="box project">
             <div class="text project-content">
               <h4>Languages Used</h4>
-              <p>&nbsp - &nbsp</p>
+              <p class="ifen">&nbsp - &nbsp</p>
               <p>Html, CSS, JavaScript</p>
             </div>
           </div>
@@ -278,7 +278,7 @@
           <div class="box project">
             <div class="text project-content">
               <h4>IDE</h4>
-              <p>&nbsp - &nbsp</p>
+              <p class="ifen">&nbsp - &nbsp</p>
               <p>Visual Studio Code - Version: 1.77.3</p>
             </div>
           </div>
